# qt-splash-screen

./: CMakeLists.txt  CMakePresets.json  README.md  build.bat  project_manager.bat
.claude/: settings.local.json
cmake/: ExternalLibraries.cmake  ProjectOptions.cmake  run_windeployqt.cmake
example/: main.cpp
resources/style/: dark.qss  light.qss
src/: MainWindow.cpp  MainWindow.h  SplashScreenWidget.cpp  SplashScreenWidget.h  main.cpp
